# hai

./: .gitignore  CHANGELOG.md  Cargo.toml  Makefile  README.md  config.toml.example  dist-workspace.toml
.cursor/rules/: project.mdc
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yaml  ci.yml  release.yml
assets/: Makefile  tarball.tape
assets/test/: readme.txt
doc/: Makefile  README.md  config.md  manual.md
installer/: README.md  post-install.ps1  post-install.sh
scripts/: bump_version.sh
src/: config.rs  error.rs  history.rs  main.rs  utils.rs
src/ai_providers/: anthropic.rs  mock.rs  mod.rs  openai.rs
src/providers/: anthropic.rs  mock.rs  mod.rs  openai.rs
tests/: cli_tests.rs
