[package]
name = "hai"
version = "0.1.0"
edition = "2021"
description = "~ tiny CLI tool that turns natural language into Bash or Zsh commands"
authors = ["Greg Bell <code@gregbell.ca>"]
license = "GPL-3.0"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
reqwest = { version = "0.11", features = ["json", "blocking"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
anyhow = "1.0"
dirs = "5.0"
dialoguer = "0.11"
tokio = { version = "1.35", features = ["full"] }
async-trait = "0.1"
log = "0.4"
env_logger = "0.10"
chrono = { version = "0.4", features = ["serde"] }
